começo da segunda aula

--- a/index.html
+++ b/index.html
@@ -42,12 +42,20 @@
 
 <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQtEv2p5cZ1Z_LBEaKnDR6-JIoG5orJmR3vzA&usqp=CAU" />
 
-<h3>+3.500</h3>
-<p>Pacientes atendidos</p>
-<h3>+15</h3>
-<p>Especialistas Disponíveis</p>
-<h3>+10</h3>
-<p>Anos no Mercado</p>
+<div class="stats">
+    <div class="stat">
+        <h3>+3.500</h3>
+        <p>Pacientes atendidos</p>
+    </div>
+    <div class="stat">
+        <h3>+15</h3>
+        <p>Especialistas Disponíveis</p>
+    </div>
+    <div class="stat">
+        <h3>+10</h3>
+        <p>Anos no Mercado</p>
+    </div>
+</div>
 </header>
 </body>
 </html>
